<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/radio1"
            android:padding="8dp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/radio2"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/radio3"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/radio4"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/radio5"
            android:padding="8dp"/>

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="STOP MUSIC"
            android:textStyle="bold"
            android:textColor="#F82D1E"
            android:padding="8dp"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="?attr/textColor"
            android:backgroundTint="@color/blue"
            android:background="@drawable/edit_round"
            android:drawableLeft="@drawable/music_icon"
            android:drawablePadding="8dp"
            android:paddingRight="8dp"
            android:paddingStart="10dp"
            android:layout_weight="1"
            android:text="Play" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:textColor="?attr/textColor"
            android:backgroundTint="#FF5722"
            android:drawableLeft="@drawable/cancel_icon"
            android:paddingRight="8dp"
            android:paddingStart="10dp"
            android:background="@drawable/edit_round"
            android:layout_weight="1"
            android:text="Cancel" />
    </RelativeLayout>
</LinearLayout>